# commitlint-pre-commit-hook

./: .gitignore  .pre-commit-hooks.yaml  .releaserc.json  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  renovate.json
.github/: FUNDING.yml  dependabot.yml  renovate.json5
.github/workflows/: auto-release-version.yml  dependabot-auto-merge.yml
