[tool.poetry]
name = "commitlint-pre-commit-hook"
version = "3.0.0"
description = "A @commitlint/cli hook for pre-commit"
authors = ["Biarri Optimisation <thomas.cranny@biarri.com>", "Alessandro Cuppari <me@alessandrojcm.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
